--- a/client/src/components/Driver/driver.css
+++ b/client/src/components/Driver/driver.css
@@ -16,4 +16,30 @@ input {
 #driver-wrapper {
   display: flex;
   flex-direction: column;
+  align-content: space-between;
+  justify-content: space-between;
+}
+
+#routes-list {
+  overflow: auto;
+  height: 200px;
+}
+
+#routes-list-wrapper {
+  width: 50vh;
+  margin-bottom: 30px;
+}
+
+#routes-list-intro {
+  margin-bottom: 20px;
+  font-weight: bold;
+}
+
+.cancel {
+  color: red;
+  font-weight: bold;
+}
+
+.cancel:hover {
+  cursor: pointer;
 }
