--- a/client/src/components/Driver/driver.css
+++ b/client/src/components/Driver/driver.css
@@ -20,6 +20,15 @@ input {
   justify-content: space-between;
 }
 
+.cancel {
+  color: red;
+  font-weight: bold;
+}
+
+.cancel:hover {
+  cursor: pointer;
+}
+
 #routes-list {
   overflow: auto;
   height: 200px;
@@ -35,11 +44,18 @@ input {
   font-weight: bold;
 }
 
-.cancel {
-  color: red;
+#list-headers {
+  word-spacing: 4rem;
   font-weight: bold;
+  width: 500px;
+  color: blue;
+  margin-left: 30px;
 }
 
-.cancel:hover {
-  cursor: pointer;
+.list-item {
+  /* word-spacing: 1rem; */
+  /* /* width: 500px; */
+  display: flex;
+  flex-direction: row;
+  align-content: space-between;
 }
