--- a/client/src/components/Driver/driver.css
+++ b/client/src/components/Driver/driver.css
@@ -18,34 +18,27 @@ input {
   flex-direction: column;
   align-content: space-between;
   justify-content: space-between;
+  width: 100%;
 }
 
-.cancel {
-  color: red;
+#routes-list-wrapper {
+  margin-bottom: 30px;
+  padding: 30px 10px 10px 30px;
+}
+
+#routes-list-intro {
+  margin-top: -50px;
+  margin-bottom: 20px;
   font-weight: bold;
-  margin-right: 20px;
-}
-
-.cancel:hover {
-  cursor: pointer;
+  width: 370px;
+  max-width: 90vw;
 }
 
 #routes-list {
   overflow: auto;
-  height: 150px;
-  width: inherit;
-}
-
-#routes-list-wrapper {
-  width: 45vh;
-  margin-bottom: 30px;
-  padding: 20px;
-}
-
-#routes-list-intro {
-  margin-top: -20px;
-  margin-bottom: 20px;
-  font-weight: bold;
+  height: 160px;
+  width: 360px;
+  max-width: 90vw;
 }
 
 .list-item {
@@ -58,16 +51,43 @@ input {
   width: 100px;
 }
 
-table {
-  width: inherit;
-}
-
 thead {
   position: sticky;
   top: 0px;
   background-color: white;
 }
 
-tbody {
+#table-header {
+  border-width: 1px;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: rgb(177, 177, 177);
+  width: inherit;
+}
 
+td {
+  overflow-wrap: anywhere;
+}
+
+#departure {
+  margin-right: 10px;
+}
+
+#seats {
+  padding-right: 80px;
+}
+
+.table-row:hover {
+  cursor: pointer;
+}
+
+.cancel {
+  color: red;
+  font-weight: bold;
+  margin-right: 10px;
+
+}
+
+.cancel:hover {
+  cursor: pointer;
 }
