--- a/client/src/components/Driver/driver.css
+++ b/client/src/components/Driver/driver.css
@@ -1,12 +1,3 @@
-label, input{
-  margin-top: 0.5em;
-  margin-bottom: 0.5em;
-}
-
-input {
-  width: 50%;
-}
-
 #driver-wrapper {
   display: flex;
   flex-direction: column;
@@ -30,7 +21,7 @@ input {
 
 #routes-list {
   overflow: auto;
-  height: 160px;
+  height: 200px;
   width: 360px;
   max-width: 90vw;
 }
@@ -84,4 +75,17 @@ td {
 
 .cancel:hover {
   cursor: pointer;
+}
+
+#make-new-route {
+  margin: auto;
+  margin-top: 2em;
+  color: white;
+  display: block;
+  background-color: rgb(20, 213, 104);
+  width: 12em;
+  height: 4em;
+  border: none;
+  border-radius: 2em;
+  text-transform: uppercase;
 }
