--- a/client/src/components/Driver/driver.css
+++ b/client/src/components/Driver/driver.css
@@ -86,3 +86,13 @@ td {
   text-transform: uppercase;
   font-weight: bold;
 }
+
+.arrow {
+  border: solid black;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+  transform: rotate(135deg);
+  -webkit-transform: rotate(135deg);
+  margin-left: 20px;
+}
