--- a/client/src/components/Driver/driver.css
+++ b/client/src/components/Driver/driver.css
@@ -93,13 +93,14 @@ td {
 
 .arrow {
   border: solid black;
-  border-width: 0 3px 3px 0;
+  border-width: 0 4px 4px 0;
   display: inline-block;
-  padding: 3px;
+  padding: 6px;
   transform: rotate(135deg);
   -webkit-transform: rotate(135deg);
   margin-left: 20px;
   position: absolute;
-  top: 1%;
+  top: 2%;
   left: 1%;
+  z-index: 1;
 }
