--- a/client/src/components/Driver/driver.css
+++ b/client/src/components/Driver/driver.css
@@ -15,14 +15,15 @@
   margin-top: -40px;
   margin-bottom: 20px;
   font-weight: bold;
-  width: 370px;
+  width: 90vw;
   max-width: 90vw;
 }
 
 #routes-list {
   overflow: auto;
-  height: 255px;
-  width: 360px;
+  /* height: 255px;*/
+  height: 30vh;
+  width: 90vw;
   max-width: 90vw;
 }
 
