--- a/client/src/components/Rider/RideBtmPanel.scss
+++ b/client/src/components/Rider/RideBtmPanel.scss
@@ -11,3 +11,23 @@
     flex-direction: column;
     font-family: 'Source Sans Pro', sans-serif;
 }
+
+.arrow {
+    border: solid black;
+    border-width: 0 4px 4px 0;
+    display: inline-block;
+    padding: 6px;
+    transform: rotate(135deg);
+    -webkit-transform: rotate(135deg);
+    margin-left: 20px;
+    position: absolute;
+    top: 4%;
+    left: 1%;
+    z-index: 1;
+}
+
+
+.locationMarker {
+    height: 40px;
+    width: 40px;
+}
