--- a/client/src/components/SignUp/register.scss
+++ b/client/src/components/SignUp/register.scss
@@ -15,10 +15,13 @@
     background-color: rgb(20, 213, 104);
     width: 12em;
     height: 4em;
+    line-height: 4em;
     border: none;
     border-radius: 2em;
     text-transform: uppercase;
     font-weight: bold;
+    text-decoration: none;
+    text-align: center;
   }
 
   #already-have-account {
