--- a/client/src/components/main.scss
+++ b/client/src/components/main.scss
@@ -1,5 +1,4 @@
 .main-page-button {
-  margin-top: 40px;
   margin: auto;
   margin-top: 2em;
   color: white;
@@ -7,10 +6,16 @@
   background-color: rgb(20, 213, 104);
   width: 12em;
   height: 4em;
+  line-height: 4em;
   border: none;
   border-radius: 2em;
   text-transform: uppercase;
   font-weight: bold;
+  text-decoration: none;
+  text-align: center;
+  &:hover {
+    color: white;
+  }
 }
 
 .arrow {
