--- a/client/src/components/Driver/routeForm.scss
+++ b/client/src/components/Driver/routeForm.scss
@@ -60,4 +60,11 @@
     margin-top: 14px;
     margin-bottom: 10px;
   }
+
+  .error {
+    margin-top: 10px;
+    color: red;
+    font-weight: bold;
+    text-align: center;
+  }
 }
