connected Tip Driver button to balance transfer page

--- a/client/src/components/Rider/RideConfirmationPage.scss
+++ b/client/src/components/Rider/RideConfirmationPage.scss
@@ -36,6 +36,9 @@
 
 .riderBtn {
     height: 50px;
+    line-height: 50px;
+    text-align: center;
+    text-decoration: none;
     width: 150px;
     color: green;
     background-color: white;
