--- a/client/src/components/SignUp/register.scss
+++ b/client/src/components/SignUp/register.scss
@@ -1,10 +1,15 @@
 #register {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
   label, input{
-    margin-top: 0.5em;
-    margin-bottom: 0.5em;
+    margin-top: 0.05em;
+    margin-bottom: 0.05em;
     border-radius: 1.5em;
     height: 2em;
-    width: 97%;
+    min-width: 75%;
+    max-width: 75%;
   }
 
   .register-buttons {
@@ -28,4 +33,39 @@
     padding-top: 20px;
     text-align: center;
   }
+  .wave {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+    transform: rotate(180deg);
+    z-index: -1;
+}
+
+.wave svg {
+    position: relative;
+    display: block;
+    width: calc(148% + 1.3px);
+    height: 106px;
+    z-index: -1;
+}
+
+.wave .shape-fill {
+    fill: #3ACA52;
+}
+}
+form {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  top: 15vh;
+}
+#nav {
+  width: 100%;
+
 }
