--- a/client/src/components/Driver/routeForm.scss
+++ b/client/src/components/Driver/routeForm.scss
@@ -13,18 +13,46 @@
   padding: 10px;
   opacity: 0.99;
   box-shadow: 2px 2px rgb(199, 199, 199);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  .route_form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 
   #form_title {
     text-align: center;
   }
 
-  label, input{
+  label {
+    margin-top: 0.5em;
+    border-radius: 1.5em;
+    height: 2.5em;
+    width: 95%;
+  }
+
+  input {
     margin-top: 0.5em;
     margin-bottom: 0.5em;
     border-radius: 1.5em;
     height: 2.5em;
-    width: 97%;
-    margin-left: 4px;
+    width: 95%;
+  }
+
+  #driver-form-table {
+    font-family: inherit;
+    font-size: 20;
+    width: 95%;
+  }
+
+  #date, #departure, #seats {
+    width: 90%;
   }
 
   #submit_button {
