--- a/client/src/components/Navbar/navbar.scss
+++ b/client/src/components/Navbar/navbar.scss
@@ -16,7 +16,7 @@ $primaryGreen: #15D568;
 
 .nav-menu {
   background-color: $primaryGreen;
-  width: 250px;
+  width: 275px;
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -73,3 +73,6 @@ $primaryGreen: #15D568;
   color: #f5f5f5;
 }
 
+span {
+  margin-left: .6rem;
+}
