Margin causing gap, compensation for gap rm

--- a/client/src/components/Navbar/navbar.scss
+++ b/client/src/components/Navbar/navbar.scss
@@ -5,7 +5,7 @@ $primaryGreen: #15D568;
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  margin-bottom: 1rem;
+  //margin-bottom: 1rem;
 }
 
 .menu-bars {
