--- a/client/src/components/Balance/balance.scss
+++ b/client/src/components/Balance/balance.scss
@@ -39,6 +39,10 @@
     }
   }
 
+  #CurrentBalance {
+    margin-top: 2rem;
+  }
+
   .balance-error {
     font-weight: bold;
     font-size: 1.2rem;
