--- a/client/src/components/Navbar/navbar.scss
+++ b/client/src/components/Navbar/navbar.scss
@@ -78,7 +78,7 @@ $hover: #0a6b34;
       height: calc(100vh - 64px);
       top: 64px;
       position: absolute;
-      right: -100%;
+      left: 100%;
       transition: 350ms;
       z-index: 100;
       padding-bottom: 3rem;
@@ -94,7 +94,7 @@ $hover: #0a6b34;
   }
 
   .nav-menu.active {
-    right: 0;
+    left: calc(100% - 300px);
     transition: 350ms;
     li {
       border-radius: 3px;
@@ -115,76 +115,4 @@ $hover: #0a6b34;
     top: 7px;
     left: 48px;
   }
-
 }
-
-
-
-// .menu-bars {
-//   margin-left: 2rem;
-//   font-size: 2rem;
-//   background: none;
-// }
-
-// .nav-menu {
-//   background-color: $primaryGreen;
-//   width: 275px;
-//   height: 100vh;
-//   display: flex;
-//   justify-content: center;
-//   position: fixed;
-//   top: 0;
-//   left: -100%;
-//   transition: 850ms;
-//   &.active {
-//     left: 0;
-//     transition: 350ms;
-//   }
-//   z-index: 1;
-// }
-
-// .nav-text {
-//   display: flex;
-//   justify-content: flex-start;
-//   align-items: center;
-//   padding-right: 16px;
-//   list-style: none;
-//   height: 60px;
-//   & a {
-//     text-decoration: none;
-//     color: #f5f5f5;
-//     font-size: 18px;
-//     font-weight: bold;
-//     width: 95%;
-//     height: 100%;
-//     display: flex;
-//     align-items: center;
-//     padding: 0 16px;
-//     border-radius: 4px;
-//     &:hover {
-//       background-color: #08632e;
-//       color: #f5f5f5;
-//     }
-//   }
-// }
-
-// .nav-menu-items {
-//   width: 100%;
-// }
-
-// .navbar-toggle {
-//   background-color: $primaryGreen;
-//   width: 100%;
-//   height: 50px;
-//   display: flex;
-//   justify-content: flex-start;
-//   align-items: center;
-// }
-
-// .nav-icon {
-//   color: #f5f5f5;
-// }
-
-// span {
-//   margin-left: .6rem;
-// }
