--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,3 +1,7 @@
+html {
+  height: 100%;
+}
+
 .App {
   height: 100%;
   text-align: center;
@@ -5,7 +9,7 @@
 
 body {
   margin: 0;
-  min-height: 100vh;
+  height: 100%;
   width: 100%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -16,7 +20,7 @@ body {
 
 #root {
   overflow-x: hidden;
-  min-height: 100vh;
+  height: 100%;
 }
 
 code {
