--- a/client/src/components/Rider/MapContainer.scss
+++ b/client/src/components/Rider/MapContainer.scss
@@ -2,3 +2,24 @@
     height: 50%;
     width: 100%;
 }
+
+.icon {
+    text-align: center;
+    transform: translate(-50%, -50%);
+    position: absolute;
+}
+
+.start-icon {
+    font-size: 2rem;
+    color: green;
+}
+
+.end-icon {
+    font-size: 2rem;
+    color: red;
+}
+
+.location-icon {
+    font-size: 3rem;
+    color: green;
+}
