changed register shapes to be same green as buttons

--- a/client/src/components/SignUp/register.scss
+++ b/client/src/components/SignUp/register.scss
@@ -59,7 +59,7 @@
 }
 
 .custom-shape-divider-bottom-1636512691 .shape-fill {
-  fill: #3ACA52;
+  fill: #15D568;
 }
 }
 form {
@@ -119,7 +119,7 @@ form {
 }
 
 .wave .shape-fill {
-  fill: #3ACA52;
+  fill: #15D568;
 }
 
 .footer {
