--- a/client/src/components/SignUp/login.scss
+++ b/client/src/components/SignUp/login.scss
@@ -15,7 +15,7 @@
     color: white;
     display: block;
     background-color: rgb(20, 213, 104);
-    width: 12em;
+    width: 100%;
     height: 4em;
     line-height: 4em;
     border: none;
@@ -32,10 +32,10 @@
   #login-submit-button {
     margin: auto;
     margin-top: 2em;
+    width: 100%;
     color: white;
     display: block;
     background-color: rgb(20, 213, 104);
-    width: 12em;
     height: 4em;
     border: none;
     border-radius: 2em;
@@ -47,9 +47,20 @@
     margin-top: 0.05em;
     margin-bottom: 0.05em;
     border-radius: 1.5em;
-    height: 2em;
-    min-width: 75%;
-    max-width: 75%;
+    height: 3em;
+    text-indent: 1rem;
+    width: 100%;
+  }
+
+  h4 {
+    margin: 1rem 0;
+    font-weight: bold;
+  }
+
+  #login-form {
+    width: 70vw;
+    min-width: 250px;
+    max-width: 400px;
   }
 
   #new-here {
@@ -107,7 +118,16 @@
     // font-weight: bold;
     text-decoration: none;
     text-align: center;
+}
 
+h4 {
+  margin: 1rem 0;
+}
+
+#login-form {
+  width: 70vw;
+  min-width: 250px;
+  max-width: 400px;
 }
 
 #new-here{
