--- a/client/src/components/SignUp/register.scss
+++ b/client/src/components/SignUp/register.scss
@@ -13,9 +13,22 @@
     margin-top: 0.05em;
     margin-bottom: 0.05em;
     border-radius: 1.5em;
-    height: 2em;
-    min-width: 75%;
-    max-width: 75%;
+    height: 3em;
+    text-indent: 1rem;
+    width: 100%;
+    // min-width: 75%;
+    // max-width: 75%;
+  }
+
+  h4 {
+    margin: 1rem 0;
+    font-weight: bold;
+  }
+
+  #register-form {
+    width: 70vw;
+    min-width: 250px;
+    max-width: 400px;
   }
 
   .register-buttons {
@@ -24,7 +37,7 @@
     color: white;
     display: block;
     background-color: rgb(20, 213, 104);
-    width: 12em;
+    width: 100%;
     height: 4em;
     line-height: 4em;
     border: none;
@@ -124,5 +137,7 @@ form {
 }
 
 .footer {
+  position: fixed;
+  bottom: 0;
   width: 100%;
 }
