--- a/client/src/components/Balance/balance.scss
+++ b/client/src/components/Balance/balance.scss
@@ -75,6 +75,8 @@
     text-align: center;
     font-size: 1.3rem;
     font-weight: bold;
+    width: 75%;
+    margin: 0 auto;
   }
 
   .balance-form {
